--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body{
     padding: 32px 0 60px;
 }
 
-.container :where(.app-header, .suggestions, .propmt-wrapper, .disclaimer-text, .prompt-form) {
+.container :where(.app-header, .suggestions, .propmt-wrapper, .disclaimer-text, .message, .prompt-form) {
     margin: 0 auto;
     width: 100%;
     padding: 0 20px;
@@ -116,6 +116,54 @@ body{
 }
 .suggestions .suggestion-item:nth-child(4) span{
     color: #6f42c1;
+}
+
+/* Chats container stylings */
+.container .chats-container {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+}
+
+.chats-container .message{
+    display: flex;
+    gap: 11px;
+    align-items: center;
+    
+}
+
+.chats-container .bot-message .avatar{
+    height: 43px;
+    width: 43px;
+    flex-shrink: 0;
+    padding: 6px;
+    align-self: flex-start;
+    margin-right: -7px;
+    border-radius: 50%;
+    background: var(--secondary-color);
+    border: 1px solid var(--secondary-hover-color);
+}
+
+.chats-container .message .message-text {
+    padding: 3px 16px;
+    word-wrap: break-word;
+    white-space: pre-line;
+}
+
+.chats-container .bot-message{
+    margin: 9px auto;
+}
+
+.chats-container .user-message{
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.chats-container .user-message .message-text {
+    padding: 12px 16px;
+    max-width: 75%;
+    border-radius: 13px 13px 3px 13px;
+    background-color: var(--secondary-color);
 }
 
 /* Prompt Coonntainer stylings */
