--- a/style.css
+++ b/style.css
@@ -144,6 +144,17 @@ body{
     border: 1px solid var(--secondary-hover-color);
 }
 
+.chats-container .bot-message .loading .avatar{
+    animation: rotate 4s linear infinite;
+}
+
+@keyframes rotate{
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+
 .chats-container .message .message-text {
     padding: 3px 16px;
     word-wrap: break-word;
