--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body{
     scrollbar-color: var(--scrollbar-color) transparent;
 }
 
-.container :where(.app-header, .suggestions, .propmt-wrapper, .disclaimer-text, .message, .prompt-form) {
+.container :where(.app-header, .suggestions, .prompt-wrapper, .disclaimer-text, .message, .prompt-form) {
     margin: 0 auto;
     width: 100%;
     padding: 0 20px;
@@ -183,6 +183,26 @@ body{
     background-color: var(--secondary-color);
 }
 
+.chats-container .user-message .file-attached{
+    display: flex;
+    gap: 6px;
+    align-items: center;
+    padding: 10px;
+    margin-top: -7px;
+    border-radius: 13px 3px 13px 13px;
+    background: var(--secondary-color);
+}
+
+.chats-container .user-message .file-attached span{
+    color: #1d7efd;
+}
+
+.chats-container .user-message .img-attached{
+    width: 50%;
+    margin-top: -7px;
+    border-radius: 13px 3px 13px 13px;
+}
+
 /* Prompt Coonntainer stylings */
 .prompt-container {
     position: fixed;
@@ -194,20 +214,20 @@ body{
     padding-left: 16px;
 }
 
-.prompt-container :where(.propmt-wrapper, .prompt-form, .prompt-actions){
+.prompt-container :where(.prompt-wrapper, .prompt-form, .prompt-actions){
     display: flex;
     gap: 12px;
     height: 56px;
     align-items: center;
 }
-.propmt-wrapper .prompt-form{
+.prompt-wrapper .prompt-form{
     width: 90%;
     height: 100%;
     border-radius: 130px;
     padding-left: 10px;
     background: var(--secondary-hover-color);
 }
-.propmt-wrapper .prompt-form .prompt-actions{
+.prompt-wrapper .prompt-form .prompt-actions{
     background: none;
     color: none;
 }
@@ -227,7 +247,7 @@ body{
     color: var(--placeholder-color);
 }
 
-.propmt-wrapper button {
+.prompt-wrapper button {
     width: 56px;
     height: 100%;
     border: none;
@@ -239,7 +259,7 @@ body{
     background: var(--secondary-hover-color);
 }
 
-.propmt-wrapper button:hover{
+.prompt-wrapper :is(button:hover, .file-icon, #cancel-file-btn ){
     background: var(--secondary-color);
 }
 .prompt-form .prompt-actions{
@@ -247,7 +267,8 @@ body{
     margin: 7px;
 }
 
-.prompt-form .prompt-actions button{
+.prompt-wrapper .prompt-form :where(.file-upload-wrapper, button, img){
+    position: relative;
     height: 45px;
     width: 45px;
 }
@@ -262,9 +283,33 @@ body{
     background: #1d7efd;
 }
 
-.prompt-form .prompt-input:valid ~ .prompt-actions #send-prompt-btn{
+.prompt-wrapper .prompt-form .prompt-input:valid ~ .prompt-actions #send-prompt-btn{
     display: block;
 }
+
+.prompt-form .file-upload-wrapper :where(button, img) {
+    position: absolute;
+    border-radius: 50%;
+    object-fit: cover;
+    display: none;
+}
+
+.prompt-form .file-upload-wrapper #add-file-btn, .prompt-form .file-upload-wrapper.active.img-attached img, .prompt-form .file-upload-wrapper.active.file-attached .file-icon, .prompt-form .file-upload-wrapper.active:hover #cancel-file-btn{
+    display: block;
+}
+
+.prompt-form .file-upload-wrapper.active #add-file-btn {
+    display: none;
+}
+
+.prompt-form #cancel-file-btn {
+    color: #d62939
+}
+
+.prompt-form .file-icon {
+    color: #1d7efd
+}
+
 
 .prompt-container .disclaimer-text {
     text-align: center;
