--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 /* Importing google fonts smooch sans*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@400;500&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins", serif;
+    font-family: "Roboto", sans-serif;
+    transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 :root {
